--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ server:
 #  datasource:
 #    username: root
 #    password: 123456
-#    url: jdbc:mysql://localhost:3306/windsound?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+#    url: jdbc:mysql://localhost:3306/swan?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 #    driver-class-name: com.mysql.cj.jdbc.Driver
 spring:
   datasource:
